--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
                 </div>
 
                 <div class="aboutMeContainerDos">                
-                <img src="/images/aboutMe.png" alt=""></div>
+                <img src="/images/sylwetka.png" alt=""></div>
 
             </div>
 
